--- a/src/Acted/LegalDocsBundle/Resources/public/css/setting.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/setting.css
@@ -8,8 +8,8 @@
 .settings .sidebar{
     border-right: 2px solid #eee;
 }
-.settings .content{
-    padding: 40px 0 !important;
+.settings .content {
+    padding: 40px 0 100px!important;
 }
 .settings .tabs-list{
     list-style: none;
@@ -53,7 +53,6 @@
 }
 .settings .box{
     position: relative;
-    overflow: hidden;
     float: left;
     padding: 0 10px;
     width: 350px;
@@ -69,8 +68,16 @@
     display: none;
     float: left;
 }
-.settings .box.active h2{display: block;}
-.settings .box.error { color: #FF0000; }
+.settings .box.active h2{ display: block; }
+.settings .box label.error {
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    left: 10px;
+    z-index: 1;
+    color: #FF0000;
+    font-weight: 400;
+}
 .settings .info-label{
     display: inline-block;
     vertical-align: top;
@@ -197,9 +204,27 @@
     margin: 0 auto;
 }
 
-.img-container img {
+.settings .img-container img {
     width: 320px;
     height: 240px;
+}
+
+.settings .box select {
+    height: 34px;
+    border: 2px solid #eee;
+    background: transparent;
+    padding: 0 10px;
+    border-radius: 4px;
+    outline: none;
+    width: 70%;
+}
+
+.settings .box.active #setting_city + span {
+    display: none;
+}
+
+.settings .box.active #setting_city {
+    display: none;
 }
 
 @media (max-width: 991px) {
@@ -209,16 +234,15 @@
     }
 }
 @media (max-width: 767px) {
-    .settings .content{padding: 20px 0 40px!important;}
+    .settings .content{padding: 20px 0 150px !important;}
     .settings .sidebar{border: none;}
     .settings .tabs-list{padding: 0;}
     .settings .tabs-list .active:after{width: 0;}
     .settings .tabs-list{border-bottom: 2px solid #ff753a;}
     .settings .main-form{max-width: 100%;}
-    .settings .box{
+    .settings .box {
         width: 100%;
-        float: none;
-        margin: 0 0 10px;
+        margin: 0 0 12px;
         text-align: left;
     }
     .settings .row{margin:0;}
