--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/prices.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/prices.html.twig
@@ -4,31 +4,7 @@
 
     <div class="container">
         <!-- THIS MENU VISIBLE ONLY ON DESCTIOP SCREEN-->
-        <ul class="categories-menu">
-            <li class="menu-block"><a href="/messages">Messages</a></li>
-            <li class="menu-block"><a href="/enquiries">Enquiries</a></li>
-            <li class="menu-block"><a href="/bookings">Bookings</a></li>
-            <li class="menu-block"><a href="/agenda">Agenda</a></li>
-            <li class="menu-block"><a href="/prices" class="active">Prices</a></li>
-            <li class="menu-block"><a href="/payment">Payment & Accounts</a></li>
-            <li class="menu-block"><a href="/reports">Reports</a></li>
-            <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-        </ul>
-
-        <!-- THIS DROPDOWN VISIBLE ONLY ON SM SCREEN-->
-        <div class="dropdown categories-dropdown hidden-lg hidden-md hidden-sm visible-xs">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Prices
-                <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li class="menu-block"><a href="/enquiries">Enquiries</a></li>
-                <li class="menu-block"><a href="/bookings">Bookings</a></li>
-                <li class="menu-block"><a href="/agenda">Agenda</a></li>
-                <li class="menu-block"><a href="/messages">Messages</a></li>
-                <li class="menu-block"><a href="/payment">Payment & Accounts</a></li>
-                <li class="menu-block"><a href="/reports">Reports</a></li>
-                <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-            </ul>
-        </div>
+        {% include 'ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig' %}
 
         <div class="note">
             Swipe left to editor or delete item
@@ -112,88 +88,8 @@
                     </li>
                 </ul>
                 <div class="button-gradient add-btn">
-                    <button type="button" class="btn register">Add Package</button>
+                    <button add-package-btn type="button" class="btn register">Add Package</button>
                 </div>
-            </article>
-            <article class="act empty">
-                <h2 class="title">
-                    <span>Act2 - Duo Saxophonist / Singer
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
-                    <!--<input class="input-num huge" type="text" placeholder="Act2 - Duo Saxophonist / Singer">-->
-                </h2>
-                <ul class="info-list">
-                    <li>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="button-gradient add-btn">
-                                        <button type="button" class="btn register">Add Package</button>
-                                    </div>
-                                    <a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add sets</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-2">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add price</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </article>
-            <article class="act empty">
-                <h2 class="title">
-                    <span>Act1 - Jazz Band
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
-                    <!--<input class="input-num huge" type="text" placeholder="Act2 - Duo Saxophonist / Singer">-->
-                </h2>
-                <ul class="info-list">
-                    <li>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="button-gradient add-btn">
-                                        <button type="button" class="btn register">Add Package</button>
-                                    </div>
-                                    <a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add sets</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-2">
-                            <ul class="price-list">
-                                <li>
-                                    <div class="add">
-                                        <a href="#">Add price</a><a class="ico-box" href="#"><i class="ico question">?</i></a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
             </article>
         </section>
         <section class="act-section blue">
