--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -132,7 +132,7 @@
                         </a>
                         {% if app.user.artist %}
                         <ul class="dropdown-menu">
-                            <li><a href="/dashboard">My Dashboard</a></li>
+                            <li><a href="/dashboard/messages/{{ app.user.id }}">My Dashboard</a></li>
                             <li><a href="/profile/settings">Settings</a></li>
                             <li role="separator" class="divider"></li>
                             {% if(app.user) %}
