Update actor seo url on settings page. 27/09/2016 12:06 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -157,7 +157,7 @@
                                 <label class="info-label">Your URL:</label>
                             </div>
                             <div class="box">
-                                <h2 class="show">http://www.acted.co/ArtistName</h2>
+                                <h2 class="show">http://www.acted.co/{{ artist.name }}</h2>
                             </div>
                         </div>
                         <div class="row">
@@ -165,7 +165,7 @@
                                 <label class="info-label">Your tiny URL:</label>
                             </div>
                             <div class="box">
-                                <h2 class="show">http://www.acted.co/ArtistName</h2>
+                                <h2 class="show">http://www.acted.co/{{ artist.name }}</h2>
                             </div>
                         </div>
                         <div class="row">
