Update settings page. Remove validation for image upload. 27/09/2016 2:48 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -164,7 +164,13 @@
                     <form action="#" class="main-form" name="profileForm" novalidate>
                         <div class="row">
                             <h2 class="title">Upload profile picture for search engine</h2>
-                            <div class="img-box"></div>
+
+                            {% if artist.search_image is defined %}
+                                <div class="img-box" style="background: url('{{ artist.search_image }}') no-repeat;"></div>
+                            {% else %}
+                                <div class="img-box"></div>
+                            {% endif %}
+
                             <div class="btn-upload">
                                 <input type="file" class="file" name="photo">
                                 <span>Select-file</span>
