--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
@@ -99,29 +99,41 @@
             </tbody>
         </table>
     </div>
-    <nav>
-        <ul class="pagination">
-            {% if paginations['previous'] is defined %}
-                <li>
-                    <a href="{{ path('admin_dashboard_recommend', {'page': paginations['previous']  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-            {% for pagin in range(1, paginations['pageRange']) %}
-                <li>
-                    <a href="{{ path('admin_dashboard_recommend', {'page': pagin }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}">{{ pagin }}</a>
-                </li>
-            {% endfor %}
-            {% if paginations['next'] is defined %}
-                <li>
-                    <a href="{{ path('admin_dashboard_recommend', {'page': paginations['next']  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
-    </nav>
-    </div>
-
+    {% if paginations.pageCount > 1 %}
+            <nav>
+                <ul class="pagination">
+                    {% if paginations['previous'] is defined %}
+                        <li>
+                            <a href="{{ path('admin_dashboard_recommend', {'page': 1  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}" aria-label="First page">
+                                <span aria-hidden="true">first</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_dashboard_recommend', {'page': paginations['previous']  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                    {% for pagin in paginations['pagesInRange'] %}
+                        <li>
+                            <a href="{{ path('admin_dashboard_recommend', {'page': pagin }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}">{{ pagin }}</a>
+                        </li>
+                    {% endfor %}
+                    {% if paginations['next'] is defined %}
+                        <li>
+                            <a href="{{ path('admin_dashboard_recommend', {'page': paginations['next']  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}"
+                               aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_dashboard_recommend', {'page': paginations['pageCount']  }) }}?query={{ filters.query }}&start={{ filters.start }}&main={{ filters.end }}">
+                                <span aria-hidden="true">last</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        {% endif %}
+        <br><br>
 {% endblock %}
