--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
@@ -53,7 +53,7 @@
             <tr>
                 <th>Artist id</th>
                 <th>User id</th>
-                <th>Name</th>
+                <th>Artist Name</th>
                 <th>Slug</th>
                 <th>Recommended</th>
                 <th>Recommended index</th>
