--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
@@ -41,7 +41,7 @@
                 <tr>
                     <th>Artist id</th>
                     <th>User id</th>
-                    <th>Name</th>
+                    <th>Artist Name</th>
                     <th>Slug</th>
                     <th>spotlight</th>
                     <th>Action</th>
