fixed image slider

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -28,7 +28,7 @@
 
     <div class="row">
 
-        <section class="media-content wrapper" id="section-photo">
+        <section class="media-content wrapper active" id="section-photo">
 
             <div class="holder">
                 <span class="btn-prev" id="nextSlide"></span>
