Rollback to allow editing first_name and last_name on settings page. 27/09/2016 7:52 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/settings.html.twig
@@ -40,20 +40,22 @@
                             <div class="box text-right">
                                 <label class="info-label">First name</label>
                             </div>
-                            <div class="box active">
+                            <div class="box">
                                 <label error class="error">Error!</label>
-                                <input hidden type="text" placeholder="{{ artist.user.firstname }}" name="first_name" value="{{ artist.user.firstname }}">
+                                <input type="text" placeholder="{{ artist.user.firstname }}" name="first_name" value="{{ artist.user.firstname }}">
                                 <h2>{{ artist.user.firstname }}</h2>
+                                <button type="button" class="btn-edit"></button>
                             </div>
                         </div>
                         <div class="row">
                             <div class="box text-right">
                                 <label class="info-label">Last name</label>
                             </div>
-                            <div class="box active">
+                            <div class="box">
                                 <label error class="error">Error!</label>
-                                <input hidden type="text" placeholder="{{ artist.user.lastname }}" name="last_name" value="{{ artist.user.lastname }}">
+                                <input type="text" placeholder="{{ artist.user.lastname }}" name="last_name" value="{{ artist.user.lastname }}">
                                 <h2>{{ artist.user.lastname }}</h2>
+                                <button type="button" class="btn-edit"></button>
                             </div>
                         </div>
                         <div class="row">
